# j-pet-event-display

./: .gitignore  .gitmodules  CMakeLists.txt  EDCommonTools.h  EDGeometryVisualizator.cc  EDGeometryVisualizator.h  EDLogger.cc  EDLogger.h  EDLoggerInclude.h  INSTALL  Makefile  README  Run.cc  download_data.sh  j-pet-framework  main.cpp
geometry/: CMakeLists.txt  Makefile  createGeometryPET.cc  createGeometryPET.cpp
jenkins/: Jenkinsfile
jenkins/root_5/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
jenkins/root_6/: Dockerfile  docker-compose.yml
jenkins/root_6_matrix/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
src/: CMakeLists.txt  CommonTools.cpp  CommonTools.h  DataProcessor.cpp  DataProcessor.h  EDCommonTools.cc  EventDisplay.cpp  EventDisplay.h  GeometryVisualizator.cpp  GeometryVisualizator.h  GuiController.cpp  GuiController.h  GuiLinkDef.h  GuiSignalController.cpp  GuiSignalController.h  Logger.cpp  Logger.h  LoggerInclude.h  TreeReader.cpp  TreeReader.h
tests/: CMakeLists.txt  DataProcessorTest.cpp  EventDisplayTest.cpp  GeometryVisualisatorTest.cpp  TreeReaderTest.cpp
